Изменил synchronized на использование методов ConcurrentHashMap